# oneagent-nvbit-extension

./: .gitignore  LICENSE  README.md  THIRDPARTYLICENSE.txt
docs/: communication_endpoints.md
extension/: README.md  local_console_data_sink.py  nvbit_extension.py  plugin.json
extension/communication/: instrumentation_id.py  measurements_reader.py  metric_to_id_mapping.py  module_configuration_writer.py  request_handler.py
extension/nvml_bridge/: nvml_bridge.py
extension/util/: atomic_file.py  constants.py  utilities.py
nvbit-module/: .clang-format  CMakeLists.txt  README.md
nvbit-module/res/: nvbit-module-runtime.conf  nvbit-module.conf
nvbit-module/src/: Configuration.cpp  Configuration.h  ErrorUtil.h  Logger.cpp  Logger.h  RuntimeConfiguration.cpp  RuntimeConfiguration.h  RuntimeConfigurationPoller.cpp  RuntimeConfigurationPoller.h  cuda_utilities.cu  cuda_utilities.h  entrypoint.cu  main.cpp  preprocessor.h
nvbit-module/src/communication/: FunctionToIdMapping.cpp  FunctionToIdMapping.h  InstrumentationId.cpp  InstrumentationId.h  MeasurementsPublisher.cpp  MeasurementsPublisher.h  RuntimeConfiguration.cpp  RuntimeConfiguration.h  RuntimeConfigurationPoller.cpp  RuntimeConfigurationPoller.h
nvbit-module/src/device_functions/: branch_divergence.cu  branch_divergence.h  branch_divergence.injectee.cu  count_instrs.cu  count_instrs.entrypoint.cu  count_instrs.h  count_instrs.injectee.cu  device_utility_functions.h  functions_registry.h  gmem_access_coalescence.cu  gmem_access_coalescence.h  gmem_access_coalescence.injectee.cu  memory_access_divergence.cu  memory_access_divergence.h  memory_access_divergence.injectee.cu  occupancy.cu  occupancy.h
nvbit-module/src/util/: ErrorUtil.cpp  ErrorUtil.h  cuda_utilities.cu  cuda_utilities.h  util.h
nvbit-module/test/: CudaUtilitiesTest.cu  FunctionToIdMappingTest.cpp  InstrumentationIdTest.cpp  OccupancyTest.cu  UtilTest.cpp
plugin/: local_console_data_sink.py
plugin/nvml_bridge/: nvml_bridge.py
